--- a/conf/httpd/default.conf
+++ b/conf/httpd/default.conf
@@ -1,6 +1,6 @@
 DocumentRoot "/app/www/htdocs"
 
-<Directory "/app/www/htdocs">
+<Directory "/app/www/index.php">
     Options Indexes FollowSymLinks
     AllowOverride All
     Order allow,deny
